# AppSecurityAnalyzer

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  app.py  scanner_integration.py  start.py
examples/vulnerable_demo/: app.py  package.json  users.csv
frontend/: build.mjs  index.html
scanner/: __init__.py  main.py
scanner/core/: __init__.py  report.py
scanner/modules/: __init__.py  dependencies.py  llm_analysis.py  rate_limit.py  secrets.py  sensitive_data.py  validation.py
scanner/utils/: __init__.py  file_loader.py  patterns.py
tests/: test_backend_integration.py  test_dependencies.py  test_file_loader.py  test_frontend.py  test_llm_analysis.py  test_rate_limit.py  test_report.py  test_secrets.py  test_sensitive_data.py  test_validation.py
tests/fixtures/full_scan_project/: app.py  package.json  scan_report.json
tests/fixtures/rate_limit_project/: app.py  server.js
tests/fixtures/sample_project/: package.json  requirements.txt
tests/fixtures/sensitive_data_project/: notes.txt  users.csv
tests/fixtures/validation_project/: app.py
