[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-risk-auditor"
version = "0.1.0"
description = "Local-first CLI scanner for code risk heuristics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AI Code Risk Auditor Contributors" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
ai-code-risk-auditor = "scanner.main:main"

[tool.setuptools.packages.find]
include = ["scanner*"]
